unpackaged/main/default/objects/UniqueEntry__Scanned_Field__c/UniqueEntry__Scanned_Field__c.object-meta.xml
<CustomObject>
    <label>Scanned Fields Name</label>
    <nameField>
        <label>Scanned Fields Name Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scanned Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>