unpackaged/main/default/objects/UniqueEntry__Scanned_Field__c/fields/UniqueEntry__Field__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Field__c</fullName>
    <label>Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>