unpackaged/main/default/objects/UniqueEntry__Scanned_Field__c/fields/UniqueEntry__Importance__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Importance__c</fullName>
    <label>Importance</label>
    <length>5</length>
    <type>Text</type>
</CustomField>