unpackaged/main/default/objects/UniqueEntry__Scanned_Field__c/fields/UniqueEntry__Match_Type__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Match_Type__c</fullName>
    <label>Match Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>