unpackaged/main/default/objects/UniqueEntry__Scanned_Field__c/fields/UniqueEntry__Number_of_Characters__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Number_of_Characters__c</fullName>
    <label>Number of Characters</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>