unpackaged/main/default/objects/UniqueEntry__Scanned_Field__c/fields/UniqueEntry__Scanned_Field_Config__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Scanned_Field_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scanned Field Config Name</label>
    <referenceTo>UniqueEntry__Scanned_Field_Config__c</referenceTo>
    <relationshipLabel>Scanned Fields</relationshipLabel>
    <relationshipName>Scanned_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>